--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <title> CSS class</title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="styles/master.css">
 
   </head>
 
