--- a/index.html
+++ b/index.html
@@ -14,6 +14,36 @@
 
     <h1>Hello world wide web !</h1>
 
+    <head>
+
+      <a href="#main-menu">Open menu</a>
+
+      <nav id="main-menu">
+        <ul>
+          <li> <a href="#section01"> Go to section 01</a></li>
+          <li> <a href="#section02"> Go to section 02</a></li>
+        </ul>
+
+        <a href="#" class="close-menu">Close menu</a>
+
+      </nav>
+
+    </head>
+
+
+    <section id="section01">
+
+    <p>this is section 1</p>
+
+    </section>
+
+
+    <section id="section02">
+
+    <p>this is section 2</p>
+
+    </section>
+
 
   </body>
 </html>
