Application DA et styles
Application DA et styles

--- a/index.html
+++ b/index.html
@@ -24,52 +24,46 @@
       <span></span>
       <span></span>
 
-    <ul id="menu">
+      <ul id="menu">
 
-      <a href="#section01"><li>Section 1</li></a>
-      <a href="#section02"><li>Section 2</li></a>
-      <a href="#section03"><li>Section 3</li></a>
-      <a href="#section04"><li>Section 4</li></a>
+        <a href="#section01"><li>Section 1</li></a>
+        <a href="#section02"><li>Section 2</li></a>
+        <a href="#section03"><li>Section 3</li></a>
+        <a href="#section04"><li>Section 4</li></a>
 
-    </ul>
+      </ul>
 
-  </div>
-</nav>
-
-
-<div class="main">
+    </div>
+  </nav>
 
   <h1>Hello world wide web !</h1>
 
+  <img src="img/apes.jpg" alt="Photo d'un singe">
+
   <section id="section01">
 
-    <p>this is section 1</p>
+    <h2>this is section 1</h2>
 
   </section>
 
 
   <section id="section02">
 
-    <p>this is section 2</p>
+    <h2>this is section 2</h2>
 
   </section>
 
   <section id="section03">
 
-    <p>this is section 3</p>
+    <h2>this is section 3</h2>
 
   </section>
 
   <section id="section04">
 
-    <p>this is section 4</p>
+    <h2>this is section 4</h2>
 
   </section>
-
-</div>
-
-
-
 
 </body>
 </html>
