--- a/index.html
+++ b/index.html
@@ -14,31 +14,40 @@
 
 <body>
 
-  <nav role="navigation">
+  <header>
 
-    <div id="menuToggle">
+    <nav role="navigation" id="main-menu">
 
-      <input type="checkbox" />
+      <div id="menuToggle">
 
-      <span></span>
-      <span></span>
-      <span></span>
+        <input type="checkbox"/>
 
-      <ul id="menu">
+        <span></span>
+        <span></span>
+        <span></span>
 
-        <a href="#section01"><li>Section 1</li></a>
-        <a href="#section02"><li>Section 2</li></a>
-        <a href="#section03"><li>Section 3</li></a>
-        <a href="#section04"><li>Section 4</li></a>
+        <ul id="menu">
 
-      </ul>
+          <a href="#section01"><li>Section 1</li></a>
+          <a href="#section02"><li>Section 2</li></a>
+          <a href="#section03"><li>Section 3</li></a>
+          <a href="#section04"><li>Section 4</li></a>
+          <a href="alphabet.html" target="_blank"><li>Découvrir l'alphabet</li></a>
 
-    </div>
-  </nav>
+        </ul>
+
+      </div>
+
+    </nav>
+
+    <a href="#" class="backdrop"></a>
+    
+  </header>
+
 
   <h1>Hello world wide web !</h1>
 
-  <img src="img/apes.jpg" alt="Photo d'un singe">
+  <img src="img/apes.jpg" alt="">
 
   <section id="section01">
 
