Switch Grid/flex
Switch Grid/flex

--- a/alphabet.html
+++ b/alphabet.html
@@ -36,28 +36,14 @@
 
   </section>
 
-  <a class="btn">Bouton pour switcher</a>
 
+  <div class="CTA">
 
-  <section class="flexbox">
+       <a href="#" class="btn btn_grid">Bouton pour affichage grid</a>
 
-    <h2>Exemple des lettres en flexbox</h2>
+       <a href="#container" class="btn btn_flex">Bouton pour affichage flex</a>
 
-    <div id="container_flex">
-
-      <div class="box">I</div>
-      <div class="box">J</div>
-      <div class="box">K</div>
-      <div class="box">L</div>
-      <div class="box">M</div>
-      <div class="box">N</div>
-      <div class="box">O</div>
-      <div class="box">P</div>
-
-    </div>
-
-  </section>
-
+  </div>
 
 
 </body>
