Mise en place des svg
Mise en place des svg

--- a/alphabet.html
+++ b/alphabet.html
@@ -13,9 +13,13 @@
 
 <body>
 
-  <h1>Hello test</h1>
+  <div class="header">
 
-  <a href="index.html" class="btn">Retourner à la page des singes</a>
+    <h1>Hello test</h1>
+
+    <a href="index.html" class="btn">Retourner à la page des singes</a>
+
+  </div>
 
   <section class="grid">
 
@@ -23,7 +27,7 @@
 
     <div id="container">
 
-      <div class="box">A</div>
+      <div class="box A"><img src="../img/lettres/A.svg">A like an alligator</div>
       <div class="box">B</div>
       <div class="box">C</div>
       <div class="box">D</div>
