Lettres SVG et animations
Lettres SVG et animations

--- a/alphabet.html
+++ b/alphabet.html
@@ -27,14 +27,140 @@
 
     <div id="container">
 
-      <div class="box A"><img src="../img/lettres/A.svg">A like an alligator</div>
-      <div class="box">B</div>
-      <div class="box">C</div>
-      <div class="box">D</div>
-      <div class="box">E</div>
-      <div class="box">F</div>
-      <div class="box">G</div>
-      <div class="box">H</div>
+      <div class="box A">
+        <img src="../img/lettres/A.svg">
+        <p>like an alligator</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/B.svg">
+        <p>like a bear</p>
+      </div>
+
+      <div class="box">
+        <img  class="C"  src="../img/lettres/C.svg">
+        <p>like a cock</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/D.svg">
+        <p>like a deer</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/E.svg">
+        <p>like an elephant</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/F.svg">
+        <p>like a fox</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/G.svg">
+        <p>like a goat</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/H.svg">
+        <p>like a horse</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/I.svg">
+        <p>like an insect</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/J.svg">
+        <p>like a jellyfish</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/K.svg">
+        <p>like a kangaroo <p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/L.svg">
+        <p>like a lion</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/L.svg">
+        <p>like a lion</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/M.svg">
+        <p>like a mouse</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/N.svg">
+        <p>like a narwhals</p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/O.svg">
+        <p>like a owl<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/P.svg">
+        <p>like a penguin<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/Q.svg">
+        <p>like a quetzal<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/R.svg">
+        <p>like a rhino<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/S.svg">
+        <p>like a sea lion<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/T.svg">
+        <p>like a turtle<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/U.svg">
+        <p>like an unicorn<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/V.svg">
+        <p>like a vampire bat (or just bat)<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/W.svg">
+        <p>like a wolf<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/X.svg">
+        <p>like a x-ray fish<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/Y.svg">
+        <p>like a yack<p>
+      </div>
+
+      <div class="box">
+        <img src="../img/lettres/Z.svg">
+        <p>like a zebra<p>
+      </div>
 
     </div>
 
