Amélioration DA et anims
Amélioration DA et anims

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="styles/master.css">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
 
 </head>
 
@@ -44,10 +45,12 @@
 
   </header>
 
+  <div class="slider">
 
-  <h1>Hello world wide web !</h1>
+      <h1>Hello world wide web !</h1>
 
-  <img src="img/apes.jpg" alt="">
+  </div>
+
 
   <section id="section01">
 
