--- a/alphabet.html
+++ b/alphabet.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="styles/master.css">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
 
 </head>
 
@@ -17,19 +18,24 @@
 
     <h1>Hello test</h1>
 
+    <p class="txt_intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
     <a href="index.html" class="btn">Retourner à la page des singes</a>
 
   </div>
 
-  <section class="grid">
+
+  <div class="grid">
 
     <h2>Exemple des lettres en grid</h2>
 
     <div id="container">
 
       <div class="box A">
+
         <img src="../img/lettres/A.svg">
         <p>like an alligator</p>
+        
       </div>
 
       <div class="box">
@@ -164,7 +170,7 @@
 
     </div>
 
-  </section>
+  </div>
 
 
   <div class="CTA">
