Image accueil et animation alphabet
Image accueil et animation alphabet

--- a/alphabet.html
+++ b/alphabet.html
@@ -20,7 +20,7 @@
 
     <p class="txt_intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-    <a href="index.html" class="btn">Retourner à la page des singes</a>
+    <a href="index.html" class="btn">Retourner à la page principale</a>
 
   </div>
 
@@ -31,140 +31,140 @@
 
     <div id="container">
 
-      <div class="box A">
+      <div class="box">
 
-        <img src="../img/lettres/A.svg">
+        <img src="img/lettres/A.svg">
         <p>like an alligator</p>
-        
+
       </div>
 
       <div class="box">
-        <img src="../img/lettres/B.svg">
+        <img src="img/lettres/B.svg">
         <p>like a bear</p>
       </div>
 
       <div class="box">
-        <img  class="C"  src="../img/lettres/C.svg">
+        <img  class="C"  src="img/lettres/C.svg">
         <p>like a cock</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/D.svg">
+        <img src="img/lettres/D.svg">
         <p>like a deer</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/E.svg">
+        <img src="img/lettres/E.svg">
         <p>like an elephant</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/F.svg">
+        <img src="img/lettres/F.svg">
         <p>like a fox</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/G.svg">
+        <img src="img/lettres/G.svg">
         <p>like a goat</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/H.svg">
+        <img src="img/lettres/H.svg">
         <p>like a horse</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/I.svg">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 102 102"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#421c43;}.cls-3{fill:#f54752;}.cls-4,.cls-7{fill:#0d6c6f;}.cls-5{fill:#45cc95;}.cls-6{fill:#45cc96;}.cls-7{opacity:0.35;mix-blend-mode:multiply;}.cls-8{fill:#f75e9d;}.cls-9{fill:#ccf094;}.cls-10{fill:#6fb2f3;}.cls-11{fill:#92d8ff;}</style></defs><g class="cls-1"><g id="OBJECTS"><path class="cls-2" d="M75.11,24A2,2,0,0,1,74.86,25a.83.83,0,0,1-.79.42.75.75,0,0,1-.73-.69,2.71,2.71,0,0,1,.38-1.5.74.74,0,0,1,.58-.38.73.73,0,0,1,.76.54A3.41,3.41,0,0,1,75.11,24Z"/><path class="cls-2" d="M73.52,28.43a1.77,1.77,0,0,1-.67,1.36.86.86,0,0,1-1.09.05.88.88,0,0,1-.24-1.06,3,3,0,0,1,.7-.94.71.71,0,0,1,.85-.18A.79.79,0,0,1,73.52,28.43Z"/><path class="cls-2" d="M68.52,32.86a1.48,1.48,0,0,1,.12-.4,1.85,1.85,0,0,1,1.08-.86.7.7,0,0,1,.91.61,1.64,1.64,0,0,1-.89,1.53A.92.92,0,0,1,68.52,32.86Z"/><path class="cls-2" d="M66.32,34.06a.78.78,0,0,1,.79.44.76.76,0,0,1-.16.87,1.76,1.76,0,0,1-.74.55.88.88,0,0,1-1.1-.32.85.85,0,0,1,.17-1.13A1.45,1.45,0,0,1,66.32,34.06Z"/><path class="cls-2" d="M62.67,36.58a.72.72,0,0,1,.74,1.1,1.86,1.86,0,0,1-.67.85.74.74,0,0,1-.81,0,.84.84,0,0,1-.47-.77A1.31,1.31,0,0,1,62.67,36.58Z"/><path class="cls-2" d="M73.29,18.9a.79.79,0,0,1,.52.14,2,2,0,0,1,.71.9.76.76,0,0,1-.28.9.66.66,0,0,1-.92-.07,2.34,2.34,0,0,1-.65-1A.64.64,0,0,1,73.29,18.9Z"/><path class="cls-3" d="M62.16,30.51a5.44,5.44,0,0,1-3.11-.84c-.65-.34-1.28-.71-1.92-1.09a3.49,3.49,0,0,0-3.45-.28,1.83,1.83,0,0,1-.92.16A.93.93,0,0,1,52,27.15a1.65,1.65,0,0,1,.53-.67,3.75,3.75,0,0,1,2.17-.8,7.64,7.64,0,0,1,4.75,1.39,18.45,18.45,0,0,0,1.81,1,3.27,3.27,0,0,0,2.38.2,3,3,0,0,0,1.32-.82,1.13,1.13,0,0,0,.1-1.57,7.34,7.34,0,0,0-.51-.6,4.61,4.61,0,0,1-.44-.55A1.07,1.07,0,0,1,64.91,23a1.78,1.78,0,0,1,1.58.74c.19.24.34.53.51.79a.32.32,0,0,0,.4.16c.2-.06.4-.14.6-.19a2,2,0,0,1,1.31.09,1.35,1.35,0,0,1,.65.55.85.85,0,0,1-.49,1.37,2.93,2.93,0,0,1-.77.16,1.62,1.62,0,0,0-1.23.75c-.31.43-.61.86-.94,1.26a4.77,4.77,0,0,1-3.7,1.81Z"/><path class="cls-4" d="M35.94,33.62c0,3.52-.1,7.05,0,10.57.15,4,.06,7.94.09,11.91s0,7.89,0,11.84,0,7.68,0,11.52c0,1.63,0,3.27,0,4.9a8.58,8.58,0,0,1-.16,1.24,1.69,1.69,0,0,1-.29.64.87.87,0,0,1-.88.38,17.9,17.9,0,0,1-2.3-.55,16.86,16.86,0,0,1-3.24-1.22,1.41,1.41,0,0,1-.73-2.09,6.32,6.32,0,0,1,1.62-2.12c.42-.35.8-.76,1.19-1.14a.15.15,0,0,0,0-.26,3.71,3.71,0,0,0-.5-.23,15,15,0,0,1-2.43-1.31,1.68,1.68,0,0,1-.6-2.27,6,6,0,0,1,1.12-1.52,18.86,18.86,0,0,1,1.95-1.84c.18-.14.17-.26,0-.36a18.89,18.89,0,0,1-2.42-1.48A3.62,3.62,0,0,1,28,70a1.55,1.55,0,0,1-.37-2,2.69,2.69,0,0,1,.48-.63,26,26,0,0,1,2.27-2.18c.18-.14.18-.24,0-.38-.46-.38-.93-.78-1.41-1.14s-.81-.75-1.23-1.11a1.29,1.29,0,0,1-.24-1.65,7.38,7.38,0,0,1,1-1.4c.45-.48.93-.93,1.39-1.4l.61-.61c.21-.22.2-.27,0-.44l-1.93-1.5a6.8,6.8,0,0,1-1-1,1.79,1.79,0,0,1-.11-2.19,8,8,0,0,1,1.31-1.47l2.13-1.75.18-.15c.14-.14.13-.27-.06-.38-.48-.26-1-.54-1.45-.79a16,16,0,0,1-2-1.25,1.43,1.43,0,0,1-.53-1.93,2.91,2.91,0,0,1,.35-.62,12.43,12.43,0,0,1,1.95-2.15c.59-.48,1.16-1,1.72-1.5.19-.17.18-.29,0-.44-.48-.32-1-.63-1.45-1-.65-.44-1.31-.87-1.93-1.35a1.59,1.59,0,0,1-.6-2.08,3.83,3.83,0,0,1,.37-.69,19.65,19.65,0,0,1,2.08-2.57c.29-.3.55-.63.83-.95a.23.23,0,0,0-.07-.39,8.75,8.75,0,0,1-1.74-1.47,4.2,4.2,0,0,1-.77-1.1,2.57,2.57,0,0,1,.69-3.33A10.91,10.91,0,0,1,29.83,24a30.45,30.45,0,0,1,4-2.25,5.44,5.44,0,0,1,.66-.28A1.11,1.11,0,0,1,36,22.65c-.09,1.47,0,3-.05,4.42-.06,1.79,0,3.58,0,5.36Z"/><path class="cls-5" d="M32.62,77.06a.76.76,0,0,1-.81.8.86.86,0,0,1-.23,0,5.21,5.21,0,0,1-1.92-.9.67.67,0,0,1-.28-.89.78.78,0,0,1,.86-.39,8.71,8.71,0,0,1,1.87.61A.77.77,0,0,1,32.62,77.06Z"/><path class="cls-5" d="M32.15,28.68a.79.79,0,0,1-.89.88,1.85,1.85,0,0,1-.45-.11,4.86,4.86,0,0,1-1.24-.69,1.57,1.57,0,0,1-.37-.4.77.77,0,0,1,0-.76.62.62,0,0,1,.66-.33,4.3,4.3,0,0,1,2.09.86A.67.67,0,0,1,32.15,28.68Z"/><path class="cls-5" d="M30.53,82.72a5.62,5.62,0,0,1,1.9.73.82.82,0,0,1-.66,1.47,5.48,5.48,0,0,1-1.83-.86.72.72,0,0,1-.28-.83A.85.85,0,0,1,30.53,82.72Z"/><path class="cls-5" d="M31.26,63.18a1.8,1.8,0,0,1-.33-.06,4.84,4.84,0,0,1-1.38-.74,1,1,0,0,1-.38-.58.73.73,0,0,1,.52-.85,1.45,1.45,0,0,1,.55,0,4.55,4.55,0,0,1,1.49.67.85.85,0,0,1,.42.72A.79.79,0,0,1,31.26,63.18Z"/><path class="cls-5" d="M31.5,70.3a1.88,1.88,0,0,1-.32-.06,6.55,6.55,0,0,1-1.33-.65,1.16,1.16,0,0,1-.24-.2.68.68,0,0,1-.14-.73.67.67,0,0,1,.65-.48,3.56,3.56,0,0,1,2,.7.79.79,0,0,1,.22.93A.85.85,0,0,1,31.5,70.3Z"/><path class="cls-5" d="M32,37.09a.79.79,0,0,1-.8.84.78.78,0,0,1-.31,0,3.83,3.83,0,0,1-1.58-1,.74.74,0,0,1-.13-.86A.72.72,0,0,1,30,35.7a8.63,8.63,0,0,1,1.62.78A.65.65,0,0,1,32,37.09Z"/><path class="cls-5" d="M29.87,53.16a3.12,3.12,0,0,1,1.69.58.76.76,0,0,1-.48,1.4,2.72,2.72,0,0,1-1.82-.82.69.69,0,0,1-.11-.81C29.27,53.19,29.57,53.15,29.87,53.16Z"/><path class="cls-5" d="M30.83,46.62a3.16,3.16,0,0,1-1.72-.91A.64.64,0,0,1,29,45a.59.59,0,0,1,.58-.34,3.79,3.79,0,0,1,1.91.64.71.71,0,0,1,.29.83C31.66,46.44,31.38,46.62,30.83,46.62Z"/><path class="cls-6" d="M47.31,69.73V81.56a9.42,9.42,0,0,1-.8,3.92,6.28,6.28,0,0,1-4.83,3.76,7.3,7.3,0,0,1-3.35-.12,6.37,6.37,0,0,1-3.9-3,8.91,8.91,0,0,1-1.07-3.44,26.1,26.1,0,0,1-.14-3.31v-52a21.25,21.25,0,0,1,.24-3c.06-.41,0-.84.11-1.25a13.55,13.55,0,0,1,1.51-4.63,9.21,9.21,0,0,1,3.1-3.4,6.52,6.52,0,0,1,4-1.06,5.83,5.83,0,0,1,3.57,1.51,7.91,7.91,0,0,1,1.42,1.68c.22.36.47.7.71,1a1,1,0,0,0,.93.47c.39,0,.79,0,1.18,0a20.89,20.89,0,0,1,5.66.94,3.44,3.44,0,0,1,1.28.75,2.62,2.62,0,0,1,.73,2.75A4.7,4.7,0,0,1,56,25.55a16.34,16.34,0,0,1-1.65,1.22c-.29.19-.29.29,0,.56a3.91,3.91,0,0,1,.57.65,3.4,3.4,0,0,1,.24,3,5.45,5.45,0,0,1-1.67,2.25,9.38,9.38,0,0,1-4.74,2l-1.09.16a.29.29,0,0,0-.29.3c0,.19,0,.37,0,.56V45a.75.75,0,0,1,0,.15,1.22,1.22,0,0,0,.39,1A13.27,13.27,0,0,0,51,48.57c1.28.72,2.64,1.3,4,1.92l1.21.59a.91.91,0,0,1,.59.85,1,1,0,0,1-.62.93,3.38,3.38,0,0,1-.75.22c-.31.07-.62.11-.93.17-.1,0-.13.1-.08.17a3.59,3.59,0,0,0,.32.35l.94.95.16.18a.89.89,0,0,1,.21,1,.92.92,0,0,1-.91.5,5.18,5.18,0,0,1-1.18-.09,6.17,6.17,0,0,0-.62-.08.23.23,0,0,0-.19.09.25.25,0,0,0,0,.22L54,57.8a3.86,3.86,0,0,1,.36.7.86.86,0,0,1-.82,1.21,1.81,1.81,0,0,1-.76-.18,45.84,45.84,0,0,1-4.63-2.37c-.23-.13-.48-.42-.69-.3s-.12.52-.12.79q0,6,0,12.08Z"/><path class="cls-7" d="M42.66,34.09a2,2,0,0,1,.1-.84.66.66,0,0,1,1.15-.17.57.57,0,0,1,.08.13,4,4,0,0,0,2.58,1.93,3.36,3.36,0,0,0,.45.14.5.5,0,0,1,.41.58,5.51,5.51,0,0,1-.06.7,3.93,3.93,0,0,0,0,1.41,2.55,2.55,0,0,1,0,.87.34.34,0,0,1-.44.33,3.71,3.71,0,0,1-.67-.2,5.91,5.91,0,0,1-3.58-4.31A4.06,4.06,0,0,1,42.66,34.09Z"/><path class="cls-2" d="M40.17,20.78a2.15,2.15,0,1,1,4.29-.07,2.05,2.05,0,0,1-2.13,2.16A2.18,2.18,0,0,1,40.17,20.78Z"/><path class="cls-8" d="M35.55,28.47a4,4,0,1,1,7.9,0,4,4,0,0,1-7.9,0Z"/><path class="cls-4" d="M46.91,58a1.39,1.39,0,0,1-.74-.19c-.37-.2-.74-.4-1.09-.63-1.74-1.14-3.5-2.25-5.14-3.52-.39-.31-.77-.64-1.15-1a1.4,1.4,0,0,1-.52-.94.46.46,0,0,1,.57-.54,2.4,2.4,0,0,1,.88.32c1.8,1.18,3.62,2.34,5.41,3.53.64.42,1.26.86,1.91,1.25a3,3,0,0,1,.44.33.72.72,0,0,1,.18.86A.75.75,0,0,1,46.91,58Z"/><path class="cls-4" d="M48.91,29.57a5.8,5.8,0,0,1-2.6-.48,3.5,3.5,0,0,1-1-.69,1.3,1.3,0,0,1-.41-.66.75.75,0,0,1,.23-.79.69.69,0,0,1,.74-.1,2.69,2.69,0,0,1,.55.31,5.27,5.27,0,0,0,2.55.71,6.24,6.24,0,0,0,1.72-.16A7,7,0,0,0,52.81,27a3.69,3.69,0,0,1,.64-.29,1.23,1.23,0,0,1,.47,0,.67.67,0,0,1,.48,1,1.52,1.52,0,0,1-.56.54A8.49,8.49,0,0,1,48.91,29.57Z"/><path class="cls-4" d="M41.76,39.77a1.61,1.61,0,0,1,.12-.38.45.45,0,0,1,.6-.21,1.88,1.88,0,0,1,.84.81,18.41,18.41,0,0,0,1.5,2A30.68,30.68,0,0,0,47,44.34a4.61,4.61,0,0,1,.48.51A.72.72,0,0,1,47.29,46a.57.57,0,0,1-.59,0,2.48,2.48,0,0,1-.48-.27,16.63,16.63,0,0,1-4-4.61A3.26,3.26,0,0,1,41.76,39.77Z"/><path class="cls-9" d="M38.67,63.11a3.7,3.7,0,0,1,1.93.51,7.85,7.85,0,0,1,2.31,1.74,5.38,5.38,0,0,1,.68,1A2.24,2.24,0,0,1,43.77,68a1.67,1.67,0,0,1-1,1.23,2.83,2.83,0,0,1-1.68.18,7.23,7.23,0,0,1-3.39-1.73,4.27,4.27,0,0,1-1.18-1.84,2,2,0,0,1,2-2.73Z"/><path class="cls-9" d="M37.13,79.7a3.61,3.61,0,0,1,1.39.25,6,6,0,0,1,2.78,2.12,2.15,2.15,0,0,1,.44,1.71,2.11,2.11,0,0,1-2.36,1.64,5,5,0,0,1-3.67-2.33,2.77,2.77,0,0,1-.44-1.88,1.61,1.61,0,0,1,1.55-1.51C36.92,79.69,37,79.7,37.13,79.7Z"/><path class="cls-9" d="M41.59,72.59c1.09-.18,2.82,1.16,3.09,2.19a1.75,1.75,0,0,1-1.52,2.13,2.9,2.9,0,0,1-1.9-.62,3.84,3.84,0,0,1-1.15-1.57A1.72,1.72,0,0,1,40,74a1.33,1.33,0,0,1,1.33-1.45A2.6,2.6,0,0,1,41.59,72.59Z"/><path class="cls-9" d="M40.84,46c0,1.27-.54,1.81-1.48,1.88a2.54,2.54,0,0,1-2-1,3.52,3.52,0,0,1-.83-1.5,1.54,1.54,0,0,1,1.09-1.89,2,2,0,0,1,1.51.14A2.79,2.79,0,0,1,40.84,46Z"/><path class="cls-9" d="M47.11,49.59a1.08,1.08,0,0,1-1.3,1.09,3.12,3.12,0,0,1-2.28-1.82,1.3,1.3,0,0,1,1-1.6.76.76,0,0,1,.3,0A3.16,3.16,0,0,1,47,49.19,2,2,0,0,1,47.11,49.59Z"/><path class="cls-4" d="M53.83,21a1,1,0,0,1,.77.38,5,5,0,0,1,.86,1.57.91.91,0,0,1-.55,1.15.86.86,0,0,1-.75,0,2.79,2.79,0,0,1-1.22-2.39A.85.85,0,0,1,53.83,21Z"/><path class="cls-10" d="M65.56,14.59a5.38,5.38,0,0,1,0-.55,1.54,1.54,0,0,1,.5-1,1.14,1.14,0,0,1,1.37-.26,3.93,3.93,0,0,1,1.82,1.67c.08.14.15.28.24.41a.14.14,0,0,0,.21,0l.29-.26a4.34,4.34,0,0,1,1-.72,1.52,1.52,0,0,1,1.87.29,1.38,1.38,0,0,1,.21,1.55,5,5,0,0,1-3.46,3.07,2.91,2.91,0,0,1-3.17-1.23A4.91,4.91,0,0,1,65.56,14.59Z"/><path class="cls-11" d="M68.91,18.13a1.39,1.39,0,0,1,.2-.73,10.67,10.67,0,0,1,1.62-2.11A.88.88,0,0,1,71,15.1a.61.61,0,0,1,1,.63,1.71,1.71,0,0,1-.28.73c-.36.57-.74,1.14-1.11,1.71a1.53,1.53,0,0,1-.81.6C69.24,18.93,68.92,18.68,68.91,18.13Z"/><path class="cls-11" d="M68.78,17.24c0,.49-.18.85-.45.92a.88.88,0,0,1-.92-.3,1.48,1.48,0,0,1-.26-.39,10.78,10.78,0,0,1-.7-2,1,1,0,0,1,0-.54.69.69,0,0,1,1.21-.34,1,1,0,0,1,.23.31c.29.65.56,1.3.82,2A1.85,1.85,0,0,1,68.78,17.24Z"/><path class="cls-2" d="M70.1,19.29c-1-.22-2.07-.08-3.09-.36a1.62,1.62,0,0,1-.84-.41.83.83,0,0,1,0-1.2,1.58,1.58,0,0,1,1.38-.44c1.09.13,2.18.3,3.27.45a1.56,1.56,0,0,1,.67.22.77.77,0,0,1,.41.79.8.8,0,0,1-.61.75C70.91,19.18,70.52,19.22,70.1,19.29Z"/></g></g></svg>
         <p>like an insect</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/J.svg">
+        <img src="img/lettres/J.svg">
         <p>like a jellyfish</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/K.svg">
+        <img src="img/lettres/K.svg">
         <p>like a kangaroo <p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/L.svg">
+        <img src="img/lettres/L.svg">
         <p>like a lion</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/L.svg">
+        <img src="img/lettres/L.svg">
         <p>like a lion</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/M.svg">
+        <img src="img/lettres/M.svg">
         <p>like a mouse</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/N.svg">
+        <img src="img/lettres/N.svg">
         <p>like a narwhals</p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/O.svg">
+        <img src="img/lettres/O.svg">
         <p>like a owl<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/P.svg">
+        <img src="img/lettres/P.svg">
         <p>like a penguin<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/Q.svg">
+        <img src="img/lettres/Q.svg">
         <p>like a quetzal<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/R.svg">
+        <img src="img/lettres/R.svg">
         <p>like a rhino<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/S.svg">
+        <img src="img/lettres/S.svg">
         <p>like a sea lion<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/T.svg">
+        <img src="img/lettres/T.svg">
         <p>like a turtle<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/U.svg">
+        <img src="img/lettres/U.svg">
         <p>like an unicorn<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/V.svg">
+        <img src="img/lettres/V.svg">
         <p>like a vampire bat (or just bat)<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/W.svg">
+        <img src="img/lettres/W.svg">
         <p>like a wolf<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/X.svg">
+        <img src="img/lettres/X.svg">
         <p>like a x-ray fish<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/Y.svg">
+        <img src="img/lettres/Y.svg">
         <p>like a yack<p>
       </div>
 
       <div class="box">
-        <img src="../img/lettres/Z.svg">
+        <img src="img/lettres/Z.svg">
         <p>like a zebra<p>
       </div>
 
@@ -175,9 +175,9 @@
 
   <div class="CTA">
 
-       <a href="#" class="btn btn_grid">Bouton pour affichage grid</a>
+       <a href="#" class="btn">Bouton pour affichage grid</a>
 
-       <a href="#container" class="btn btn_flex">Bouton pour affichage flex</a>
+       <a href="#container" class="btn">Bouton pour affichage flex</a>
 
   </div>
 
