--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <div class="slider">
 
-      <h1>Hello world wide web !</h1>
+      <h1 class="titre_pageone">Hello world wide web !</h1>
 
   </div>
 
