Animation insecte lettre I
Animation insecte lettre I

--- a/alphabet.html
+++ b/alphabet.html
@@ -20,7 +20,13 @@
 
     <p class="txt_intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-    <a href="index.html" class="btn">Retourner à la page principale</a>
+    <div class="CTA">
+
+         <a href="#" class="btn">Bouton pour affichage grid</a>
+
+         <a href="#container" class="btn">Bouton pour affichage flex</a>
+
+    </div>
 
   </div>
 
@@ -172,12 +178,9 @@
 
   </div>
 
-
   <div class="CTA">
 
-       <a href="#" class="btn">Bouton pour affichage grid</a>
-
-       <a href="#container" class="btn">Bouton pour affichage flex</a>
+    <a href="index.html" class="btn">Retourner à la page principale</a>
 
   </div>
 
